<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.xml_base.MyActivity" >
    <item android:id="@+id/undoGame"
        android:title="@string/undoStr"
        android:icon="@drawable/undo"
        android:orderInCategory="1"
        app:showAsAction="always">
    </item>
    <item android:id="@+id/setting"
        android:title="@string/settingStr"
        android:icon="@drawable/setting"
        android:orderInCategory="2"
        app:showAsAction="always">
    </item>
    <item android:id="@+id/gameAction"
        android:title="@string/moreActionStr"
        android:icon="@drawable/three_dots"
        android:orderInCategory="3"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/globalTop10"
...
            </item>
            <item android:id="@+id/quitGame"
                android:title="@string/quitGame"
                android:orderInCategory="6"
                app:showAsAction="never">
            </item>
            <item android:id="@+id/privacyPolicy"
                android:title="@string/privacyPolicyString"
                android:orderInCategory="7"
                app:showAsAction="never">
            </item>
        </menu>
    </item>
</menu>
...
