<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/modal_dialog_fragment_frame_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/dialog_fragment_body_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:contentDescription="background image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dialog_background" />

        <RelativeLayout
            android:id="@+id/dialog_fragment_body_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/textShown_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true">
                <TextView
                    android:id="@+id/text_shown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#ffff0000"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearlayout_for_buttons_in_modalfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/textShown_layout"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/noButton_Layout"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/dialogfragment_noButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#ffff0000"
                        android:background="#ffd3d3d3"
                        android:textStyle="bold"
                        android:text="@string/noString" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/okButton_Layout"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/dialogfragment_okButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#ff006400"
                        android:background="#ffd3d3d3"
                        android:textStyle="bold"
                        android:text="@string/okString" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</FrameLayout>