...
                        android:id="@+id/soundSettingTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:textColor="#ffffff00"
                        android:text="@string/soundStr">
                    </TextView>
                    <ToggleButton
                        android:id="@+id/soundSwitch"
                        android:checked="@{viewModel.settings.hasSound}"
                        android:layout_width="0dp"
                        android:layout_weight="1"
...
                        android:id="@+id/levelSettingTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:textColor="#ffffff00"
                        android:text="@string/playerLevelStr">
                    </TextView>
                    <ToggleButton
                        android:id="@+id/levelSwitch"
                        android:checked="@{viewModel.settings.easyLevel}"
                        android:layout_width="0dp"
                        android:layout_weight="1"
...
                        android:id="@+id/nextBallSettingTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:textColor="#ffffff00"
                        android:text="@string/nextBallSettingStr">
                    </TextView>
                    <ToggleButton
                        android:id="@+id/nextBallSettingSwitch"
                        android:checked="@{viewModel.settings.hasNextBall}"
                        android:layout_width="0dp"
                        android:layout_weight="1"
...
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2">
                <Button
                    android:id="@+id/cancelSettingButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:background="@android:color/transparent"
                    android:text="@string/cancelStr"
                    tools:ignore="ButtonStyle,NestedWeights">
                </Button>
                <Button
                    android:id="@+id/confirmSettingButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
...
